# movy

./: .gitignore  README.md  docker-compose.paperless.yml  docker-compose.yaml  pyproject.toml
docs/superpowers/plans/: 2026-05-20-data-ai-implementation.md  2026-05-29-vector-clustering-implementation.md  2026-05-31-umap-hdbscan-clustering.md  2026-06-01-data-ai-v2-implementation.md
docs/superpowers/specs/: 2026-05-20-data-ai-design.md  2026-05-29-vector-clustering-redesign.md  2026-05-31-umap-hdbscan-clustering-design.md  2026-06-01-data-ai-v2-docling-bertopic-design.md
src/data_ai/: cli.py  cli_v2.py  config.py
src/data_ai/pipeline/: __init__.py  cluster.py  cluster_v2.py  embed.py  execute.py  extract.py  extract_v2.py  match.py  naming.py  review.py  run.py  year_detect.py
src/data_ai/providers/: extractors.py  ollama.py  tesseract.py
src/data_ai/storage/: __init__.py  models.py  qdrant.py
src/data_ai/utils/: similarity.py
tests/: conftest.py  test_cli_run.py  test_cli_v2.py  test_cluster.py  test_config.py  test_extractors.py  test_integration.py  test_integration_v2.py  test_naming.py  test_pipeline.py  test_review.py  test_similarity.py  test_storage.py
tests/fixtures/: sample.txt
tests/integration/: test_full_pipeline.py
tests/pipeline/: test_cluster_v2.py  test_extract_v2.py  test_naming.py  test_run.py  test_year_detect.py
