[project]
name = "data-ai"
version = "0.1.0"
description = "Intelligent file organizer using semantic similarity"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "ollama>=0.1.0",
    "pdfplumber>=0.9.0",
    "python-docx>=0.8.0",
    "python-pptx>=0.6.0",
    "pytesseract>=0.3.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "watchdog>=3.0.0",
    "rich>=13.0.0",
    "qdrant-client>=1.7.0",
    "scikit-learn>=1.3.0",
    "pyvis>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
data-ai = "data_ai.cli_v2:app"
data-ai-legacy = "data_ai.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
