[project]
name = "data-ai"
version = "0.2.0"
description = "Intelligent file organizer using semantic similarity"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "ollama>=0.1.0",
    "rich>=13.0.0",
    "docling>=2.0.0",
    "bertopic>=0.16.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
data-ai = "data_ai.cli_v2:app"
data-ai-legacy = "data_ai.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
